--- a/BajajSales/index.html
+++ b/BajajSales/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/public/BAJAJSALES.png" />
+    <link rel="icon" type="image/x-icon" href="./public/BAJAJSALES.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bajaj Sales</title>
   </head>
